Adding simple test and configs for Travis CI and Codecov

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
             "Tests\\": "tests/"
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit --colors=always"
+    }
     "extra": {
         "laravel": {
             "dont-discover": [
