--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,6 @@
             "Tests\\": "tests/"
         }
     },
-    "scripts": {
-        "test": "vendor/bin/phpunit --colors=always"
-    }
     "extra": {
         "laravel": {
             "dont-discover": [
@@ -43,6 +40,7 @@
         }
     },
     "scripts": {
+        "test": "vendor/bin/phpunit --colors=always",
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
