--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,16 @@ php:
   - 7.1
   - 7.2
 
-sudo: false
-
-cache:
-  directories:
-    - $HOME/.composer/cache
-
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer install --no-interaction --prefer-source --dev
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
+  - composer self-update
+  - composer install --no-interaction
+  - php artisan key:generate
+  - php artisan migrate
 
 script:
-  - composer test -- --coverage-clover=coverage.xml
+  - vendor/bin/phpunit
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
