--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 
 before_script:
   - cp .env.travis .env
-  - mysql -e 'create database homestead_test;'
+  - mysql -e 'create database spendy_test;'
   - composer self-update
   - composer install --no-interaction
   - php artisan key:generate
@@ -16,4 +16,4 @@ script:
   - vendor/bin/phpunit
 
 after_success:
-    - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
