--- a/.env.travis
+++ b/.env.travis
@@ -3,7 +3,7 @@ APP_KEY=SomeRandomString
 
 DB_CONNECTION=testing
 DB_TEST_USERNAME=spendy
-DB_TEST_PASSWORD=spendy
+DB_TEST_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
