--- a/.env.travis
+++ b/.env.travis
@@ -1,8 +1,8 @@
 APP_ENV=testing
-APP_KEY=SomeRandomString
+APP_KEY=
 
 DB_CONNECTION=testing
-DB_TEST_USERNAME=spendy
+DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
 
 CACHE_DRIVER=array
