Travis works! Now adding Codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ php:
 before_script:
   - cp .env.travis .env
   - mysql -e 'create database spendy_test;'
-  - composer self-update
-  - composer install --no-interaction
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
   - php artisan key:generate
   - php artisan migrate
 
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
