--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
-        "tcg/voyager": "1.x"
+        "tcg/voyager": "1.x",
+        "ext-gd": "*",
+        "ext-calendar": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
