--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-calendar": "*",
+        "ext-gd": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
-        "tcg/voyager": "1.x",
-        "ext-gd": "*",
-        "ext-calendar": "*"
+        "tcg/voyager": "1.x"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
