--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
-        "tcg/voyager": "1.x"
+        "tcg/voyager": "^1.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
